# fourier

./: Cargo.toml
src/: main.rs  math.rs  visualize.rs
src/math/: functions.rs  mod.rs
src/visualize/: color.rs  definitions.rs  fourier.rs  mod.rs
